defer is niet nodig

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <button class="list-button" data-direction="right" aria-label="naar rechts"></button>
     </section>
 
-    <script defer src="scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 
 </body>
 </html>
