css opgesplitst safari deed stom

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS basics</title>
 
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/fonts.css">
+  <link rel="stylesheet" href="styles/colors.css">
+  <link rel="stylesheet" href="styles/basics.css">
+  <link rel="stylesheet" href="styles/team.css">
+  <link rel="stylesheet" href="styles/characters.css">
+
 </head>
 
 <body>
@@ -28,7 +33,7 @@
     </section>
 
 
-
+    <!-- https://www.flaticon.com/packs/fairytale-42 -->
     <section class="character-section">
       <h2>kies Sprookjesmensen en/of</h2>
       <ul>
